# gmail_reader

./: .gitignore  Dockerfile  README.md  config.ini  constants.py  example.env  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
conda_recipe/: environment.yaml  meta.yaml
gmail_reader/: __init__.py  auth.py  client.py  config.py
gmail_reader/extractor/: __init__.py  base.py  config.py  llm_extractor.py  patterns.py  prompts.py
tests/: conftest.py  test_auth.py  test_client.py  test_extractor.py  test_extractor_config.py  test_extractor_llm.py  test_extractor_patterns.py  test_extractor_prompts.py
